%% ER-диаграмма — SQLite reserves.db
%% PK — первичный ключ; FK — внешний ключ; UK — уникальное поле
%% curated_routes.reserve_ids — JSON-массив id без FK в БД
%% Составной UK: favorites(user_id, reserve_id), reviews(user_id, reserve_id)

erDiagram
    users ||--o{ favorites : "user_id"
    reserves ||--o{ favorites : "reserve_id"

    users ||--o{ reviews : "user_id"
    reserves ||--o{ reviews : "reserve_id"
    users |o--o{ reviews : "moderated_by"

    reserves ||--o{ photos : "reserve_id"

    users ||--o{ user_saved_routes : "user_id"
    reserves ||--o{ user_saved_routes : "reserve_id"

    users ||--o{ refresh_tokens : "user_id"
    users ||--o{ admin_audit_logs : "admin_user_id"

    users |o--o{ analytics_events : "user_id"
    reserves |o--o{ analytics_events : "reserve_id"

    users {
        int id PK
        text email UK
        text password_hash
        text name
        text role
        text avatar_url
        int is_blocked
        int email_verified
        text email_verify_token
        text email_verify_expires
        text password_reset_token
        text password_reset_expires
    }

    reserves {
        int id PK
        text name
        text type
        text created
        text status_text
        text status_date
        text phone
        text email
        real latitude
        real longitude
        real area
        text website
        text postal_address
        text description
        text region
        text district
        int is_published
    }

    photos {
        int id PK
        int reserve_id FK
        text url
    }

    favorites {
        int id PK
        int user_id FK
        int reserve_id FK
    }

    reviews {
        int id PK
        int reserve_id FK
        int user_id FK
        int rating
        text comment
        text status
        int moderated_by FK
        text moderated_at
        text created_at
        text updated_at
    }

    user_saved_routes {
        int id PK
        int user_id FK
        int reserve_id FK
        text profile
        text title
        text geojson
        real distance_m
        real duration_s
        text created_at
    }

    curated_routes {
        int id PK
        text slug UK
        text title
        text teaser
        text profile
        text reserve_ids
        text region_label
        text description
        text list_distance
        text list_duration
        int distance_m
        int duration_s
        int sort_order
        int is_published
        text created_at
        text updated_at
    }

    refresh_tokens {
        int id PK
        int user_id FK
        text token UK
        text expires_at
        text revoked_at
        text created_at
    }

    analytics_events {
        int id PK
        int user_id FK
        int reserve_id FK
        text event_type
        text payload
        text created_at
    }

    admin_audit_logs {
        int id PK
        int admin_user_id FK
        text action
        text target_type
        int target_id
        text payload
        text created_at
    }
